--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">
-    <img src="logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+    <img src="https://github.com/VijayMone/SalesforceAssignment/blob/master/logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
     Telecom Company Portal
   </a>
 </nav>
