--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <!--  value="vijay_mone@persistent.com">                                      -->
 <!--  ----------------------------------------------------------------------  -->
 
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-light bg-dark">
   <a class="navbar-brand" href="#">
-    <img src="https://github.com/VijayMone/SalesforceAssignment/blob/master/logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+    <img src="https://github.com/VijayMone/SalesforceAssignment/blob/master/logo.jpg" width="40" height="40" class="d-inline-block align-top" alt="">
     Telecom Company Portal
   </a>
 </nav>
