--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <!--  value="vijay_mone@persistent.com">                                      -->
 <!--  ----------------------------------------------------------------------  -->
 
-<nav class="navbar navbar-light bg-dark">
+<nav class="navbar navbar-light bg-dark" style="width:200px;">
   <a class="navbar-brand" href="#">
     <img src="https://github.com/VijayMone/SalesforceAssignment/blob/master/logo.jpg" width="40" height="40" class="d-inline-block align-top" alt="">
     Telecom Company Portal
   </a>
 </nav>
+  &nbsp;&nbsp;&nbsp;
 <div class="card" style = "height:600px;width:500px;">
   <div class="card-header">
 <div class = "form-group">
