--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <nav class="navbar navbar-light bg-dark" style="width:200px;">
   <a class="navbar-brand" href="#">
-    <img src="https://github.com/VijayMone/SalesforceAssignment/blob/master/images.png" width="40" height="40" class="d-inline-block align-top" alt="">
+    <img src="images.png" width="40" height="40" class="d-inline-block align-top" alt="">
     Telecom Company Portal
   </a>
 </nav>
