--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </a>
 </nav>
   &nbsp;&nbsp;&nbsp;
-<div class="card" style = "height:600px;width:500px;">
+<div class="card" style = "height:600px;width:500px; margin:20px;">
   <div class="card-header">
 <div class = "form-group">
 <label for="name">Contact Name</label><input  id="name" maxlength="80" name="name" size="20" type="text" class="form-control"/><br>
