--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!--  value="vijay_mone@persistent.com">                                      -->
 <!--  ----------------------------------------------------------------------  -->
 
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">
     <img src="images/images.png" width="40" height="40" class="d-inline-block align-top" alt="">
     Telecom Company Portal
