--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">
-    <img src="images/images.png" width="40" height="40" class="d-inline-block align-top" alt="">
+    <img src="images/images.png" width="40" height="40" class="d-inline-block align-top" alt="TC">
     Telecom Company Portal
   </a>
 </nav>
